Bug 9680 - cart aligned right in CCSR
The CCSR theme sets a min-width of 1000px for windows which are more
than 700px wide. This caused the cart popup window to be given a
min-width of 1000px, resulting in a broken layout with unnecessary
horizontal scrolling.

This patch adds a class to the cart template and to other pop-up window
templates to ensure that a large min-width is not enforced and to give
consistent padding to those pages.

To test, set your theme to 'CCSR' and view the following pop-up pages:

- The Cart. From the cart, trigger:
  - The "send" window
  - The "download" window
- From a view of a List's contents trigger:
 - The "send" window"
 - The "download" window

Each of these pages should look correct with no horizontal scrolling.

All tests pass

Template and CSS changes only, but no string changes.
Save for inclusion in 3.12.

--- a/koha-tmpl/opac-tmpl/ccsr/en/css/colors.css
+++ b/koha-tmpl/opac-tmpl/ccsr/en/css/colors.css
@@ -13,6 +13,11 @@ body {
     background-color : #eaeae6;
 }
 
+body.popup {
+    min-width: 100px;
+    padding : 1em;
+}
+
 #container {
     background: #fff;
     border:1px solid #d2d2cf;
